added exported functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ matrix2motif,
 markov.prob,
 mdist.option,
 read.background,
+print.background,
+delete.background,
 store.background,
 read.motif,
 sim.scores,
