changes for variable length sequence scanning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ read.motif,
 sim.scores,
 score.dist,
 num.motifhits,
+num.sequences,
+len.sequences,
 num.motifhits.singlestranded,
 sim.counts,
 sample.mc,
