changes to allow for variable sequence length

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ mdist.option,
 read.background,
 print.background,
 delete.background,
-store.background,
+#store.background,
 read.motif,
 sim.scores,
 score.dist,
