changed: manual, tests, variable sequence usage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,13 @@ useDynLib(mdist)
 exportPattern(
 motif2matrix,
 matrix2motif,
-markov.prob,
+motif.length,
+#markov.prob,
 mdist.option,
 read.background,
 print.background,
 delete.background,
-#store.background,
+delete.motif,
 read.motif,
 sim.scores,
 score.dist,
@@ -18,7 +19,7 @@ num.sequences,
 len.sequences,
 num.motifhits.singlestranded,
 sim.counts,
-sample.mc,
+#sample.mc,
 overlap.prob,
 overlap.prob.singlestranded,
 comp.pois,
