changed interface functions to make it more user-friendly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,30 +3,20 @@ useDynLib(mdist)
 
 exportPattern(
 motif2matrix,
-matrix2motif,
-motif.length,
-#markov.prob,
-mdist.option,
-read.background,
-print.background,
-delete.background,
-delete.motif,
-read.motif,
-sim.scores,
-score.dist,
-num.motifhits,
-num.sequences,
-len.sequences,
-num.motifhits.singlestranded,
-sim.counts,
-#sample.mc,
-overlap.prob,
-overlap.prob.singlestranded,
-comp.pois,
-comp.pois.singlestranded,
-comp.pois.pape,
-comp.pois.test,
-dynprog.count,
-dynprog.count.test)
+mdistOption,
+readBackground,
+printBackground,
+fetchBackground,
+deleteBackground,
+deleteMotif,
+readMotif,
+simulateScoreDist,
+scoreDist,
+numMotifhits,
+simulateNumHitsDist,
+probOverlapHit,
+compoundPoissonDist,
+combinatorialDist
+)
 
 #unloadNamespace( #mdist.unload)
