changed travis operating system

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@
 
 language: r
 warnings_are_errors: false
-sudo: required
 bioc_packages:
     - BiocStyle
+
+matrix:
+    include:
+     - os: linux
+     - dist: trusty
+     - sudo: required
+
