--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ bioc_packages:
 matrix:
     include:
      - os: linux
-     - dist: trusty
-     - sudo: required
+       dist: trusty
+       sudo: required
+     - os: osx
+       osx_image: xcode7.2
 
