Improved package to be conform with BiocCheck

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(fetchBackground)
 export(lenSequences)
 export(mdistOption)
 export(motif2matrix)
+export(motifEnrichmentTest)
 export(motifLength)
 export(numMotifHits)
 export(numSequences)
