--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,18 @@
 Package: mdist
 Type: Package
-Title: Tests for Enrichment of Transcription factor motifs in DNA sequences
+Title: Tests for Enrichment of Transcription factor motifs in DNA
+        sequences
 Version: 0.99.0
 Date: 2014-10-29
 Author: Wolfgang Kopp
-Suggests:
-    knitr, rmarkdown,BiocStyle
+Suggests: knitr, rmarkdown,BiocStyle
 Maintainer: Wolfgang Kopp <kopp@molgen.mpg.de>
 Description: The package contains methods to test for statistical enrichment of
     Transcription factor motifs in DNA sequences represented as higher order
     Markov model.
 License: GPL-2
-Packaged: 2014-10-29 14:08:04 UTC; kopp
+biocViews: Transcription,MotifAnnotation,SequenceMatching,Software
+Packaged: 2016-11-24 14:30:57 UTC; kopp
 RoxygenNote: 5.0.0
 VignetteBuilder: knitr
 NeedsCompilation: yes
