change mdist to motifcounter project

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,10 @@ export(deleteBackgroundForSampling)
 export(deleteMotif)
 export(fetchBackground)
 export(lenSequences)
-export(mdistOption)
 export(motif2matrix)
 export(motifEnrichmentTest)
 export(motifLength)
+export(motifcounterOption)
 export(numMotifHits)
 export(numSequences)
 export(printBackground)
@@ -23,4 +23,4 @@ export(scoreDist)
 export(scoreDistBf)
 export(simulateNumHitsDist)
 export(simulateScoreDist)
-useDynLib(mdist, .registration=TRUE)
+useDynLib(motifcounter, .registration=TRUE)
