--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,5 @@
-# Sample .travis.yml for R projects
+# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: r
-warnings_are_errors: false
-bioc_packages:
-    - BiocStyle
-
-matrix:
-    include:
-     - os: linux
-       dist: trusty
-       sudo: required
-     - os: osx
-       osx_image: xcode7.2
-
+language: R
+sudo: false
+cache: packages
