--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
-Package: mdist
+Package: motifcounter
 Type: Package
 Title: Tests for Enrichment of Transcription factor motifs in DNA
-        sequences
+    sequences
 Version: 0.99.0
 Date: 2014-10-29
 Author: Wolfgang Kopp
-Suggests: knitr, rmarkdown,BiocStyle
+Suggests:
+    knitr,
+    rmarkdown,BiocStyle
 Maintainer: Wolfgang Kopp <kopp@molgen.mpg.de>
 Description: The package contains methods to test for statistical enrichment of
     Transcription factor motifs in DNA sequences represented as higher order
@@ -13,6 +15,6 @@ Description: The package contains methods to test for statistical enrichment of
 License: GPL-2
 biocViews: Transcription,MotifAnnotation,SequenceMatching,Software
 Packaged: 2016-11-24 14:30:57 UTC; kopp
-RoxygenNote: 5.0.0
+RoxygenNote: 5.0.1
 VignetteBuilder: knitr
 NeedsCompilation: yes
