Removed proprietary motif interface
- readMotif removed
- use instead pfms from other sources
- Rpwm and Rcpwm where removed
- motifs are used directly as arguments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,12 @@ export(combinatorialDist)
 export(compoundPoissonDist)
 export(deleteBackground)
 export(deleteBackgroundForSampling)
-export(deleteMotif)
 export(fetchBackground)
 export(lenSequences)
-export(motif2matrix)
 export(motifEnrichmentTest)
-export(motifLength)
+export(motifValid)
 export(motifcounterOption)
+export(normalizeMotif)
 export(numMotifHits)
 export(numSequences)
 export(printBackground)
@@ -18,7 +17,6 @@ export(printBackgroundForSampling)
 export(probOverlapHit)
 export(readBackground)
 export(readBackgroundForSampling)
-export(readMotif)
 export(scoreDist)
 export(scoreDistBf)
 export(simulateNumHitsDist)
