--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Date: 2014-10-29
 Author: Wolfgang Kopp
 Suggests:
     knitr,
-    rmarkdown,BiocStyle
+    rmarkdown,BiocStyle,
+    testthat
 Maintainer: Wolfgang Kopp <kopp@molgen.mpg.de>
 Description: The package contains methods to test for statistical enrichment of
     Transcription factor motifs in DNA sequences represented as higher order
