--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,8 @@ matrix:
        sudo: required
      - os: osx
        osx_image: xcode7.2
+
+r_packages:
+  - covr
+after_success:
+  - Rscript -e 'covr::codecov()'
