Major changes in interface
- Reuse existing functionality
- integrate with DNAString and DNAStringSet
- integrate with testthat
- eliminated R CMD check and R CMD BiocCheck errors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Suggests:
     knitr,
     rmarkdown,BiocStyle,
     testthat
+Imports: Biostrings
 Maintainer: Wolfgang Kopp <kopp@molgen.mpg.de>
 Description: The package contains methods to test for statistical enrichment of
     Transcription factor motifs in DNA sequences represented as higher order
@@ -16,6 +17,6 @@ Description: The package contains methods to test for statistical enrichment of
 License: GPL-2
 biocViews: Transcription,MotifAnnotation,SequenceMatching,Software
 Packaged: 2016-11-24 14:30:57 UTC; kopp
-RoxygenNote: 5.0.1
+RoxygenNote: 5.0.0
 VignetteBuilder: knitr
 NeedsCompilation: yes
