--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,11 @@ export(compoundPoissonDist)
 export(deleteBackground)
 export(deleteBackgroundForSampling)
 export(fetchBackground)
+export(generateDNAString)
+export(generateDNAStringSet)
 export(lenSequences)
 export(motifEnrichmentTest)
+export(motifHits)
 export(motifValid)
 export(motifcounterOption)
 export(normalizeMotif)
@@ -19,6 +22,11 @@ export(readBackground)
 export(readBackgroundForSampling)
 export(scoreDist)
 export(scoreDistBf)
+export(scoreDistEmpirical)
+export(scoreHistogram)
+export(scoreHistogramSingleSeq)
+export(scoreSequence)
+export(scoreThreshold)
 export(simulateNumHitsDist)
-export(simulateScoreDist)
+import(Biostrings)
 useDynLib(motifcounter, .registration=TRUE)
