--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(generateDNAString)
 export(generateDNAStringSet)
 export(lenSequences)
 export(motifEnrichmentTest)
+export(motifHitProfile)
 export(motifHits)
 export(motifValid)
 export(motifcounterOption)
@@ -21,6 +22,7 @@ export(scoreDistEmpirical)
 export(scoreHistogram)
 export(scoreHistogramSingleSeq)
 export(scoreSequence)
+export(scoreSequenceProfile)
 export(scoreThreshold)
 export(simulateNumHitsDist)
 import(Biostrings)
