--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,8 @@ Date: 2014-10-29
 Author: Wolfgang Kopp
 Suggests:
     knitr,
-    rmarkdown,BiocStyle,
-    testthat
+    rmarkdown,
+    testthat, MotifDb, prettydoc
 Imports: Biostrings
 Maintainer: Wolfgang Kopp <kopp@molgen.mpg.de>
 Description: The package contains methods to test for statistical enrichment of
