--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,8 @@
 Package: motifcounter
 Type: Package
-Title: Tests for Enrichment of Transcription factor motifs in DNA
-    sequences
+Title: R package for analysing TFBSs in DNA sequences
 Version: 0.99.0
-Date: 2014-10-29
+Date: 2016
 Author: Wolfgang Kopp
 Suggests:
     knitr,
@@ -15,9 +14,9 @@ Suggests:
 Imports:
     Biostrings
 Maintainer: Wolfgang Kopp <kopp@molgen.mpg.de>
-Description: The package contains methods to test for statistical enrichment of
-    Transcription factor motifs in DNA sequences represented as higher order
-    Markov model.
+Description: The package contains methods to investigate
+    (transcription factor) motif hit positions and motif 
+    hit enrichment with respect to a random sequence model.
 License: GPL-2
 biocViews: Transcription,MotifAnnotation,SequenceMatching,Software
 Packaged: 2016-11-24 14:30:57 UTC; kopp
