Changed motifEnrichmentTest to motifEnrichment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(compoundPoissonDist)
 export(generateDNAString)
 export(generateDNAStringSet)
 export(lenSequences)
-export(motifEnrichmentTest)
+export(motifEnrichment)
 export(motifHitProfile)
 export(motifHits)
 export(motifValid)
