--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,11 +7,11 @@ init:
         Invoke-WebRequest http://raw.github.com/krlmlr/r-appveyor/master/scripts/appveyor-tool.ps1 -OutFile "..\appveyor-tool.ps1"
         Import-Module '..\appveyor-tool.ps1'
 
+
 install:
-  ps: Bootstrap
-  #- travis-tool.sh install_bioc Biostrings MotifDb seqLogo
-  - travis-tool.sh install_bioc_deps
-  - travis-tool.sh install_deps
+  - ps: Bootstrap
+  - ./travis-tool.sh install_bioc_deps
+  - ./travis-tool.sh install_deps
 
 branches:
   only:
