changed scoreSequenceProfile to scoreProfile

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(normalizeMotif)
 export(readBackground)
 export(scoreDist)
 export(scoreHistogram)
+export(scoreProfile)
 export(scoreSequence)
-export(scoreSequenceProfile)
 import(Biostrings)
 useDynLib(motifcounter, .registration=TRUE)
