--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: R package for analysing TFBSs in DNA sequences
 Version: 0.99.0
 Date: 2016
-Author: Wolfgang Kopp
+Author: Wolfgang Kopp [aut, cre]
 Suggests:
     knitr,
     rmarkdown,
@@ -13,10 +13,32 @@ Suggests:
     prettydoc
 Imports:
     Biostrings
+Depends:
+    R(>= 3.0.0)
 Maintainer: Wolfgang Kopp <kopp@molgen.mpg.de>
-Description: The package contains methods to investigate
-    (transcription factor) motif hit positions and motif
-    hit enrichment with respect to a random sequence model.
+Description: 'motifcounter' provides functionality
+    to compute statistics related with 
+    motif matching and counting of motif matches in DNA 
+    sequences for motifs that are given by position frequency matrices (PFMs)
+    and under the assumption that the sequence drawn from 
+    a higher-order background model.
+    The package implements an efficient algorithm for computing
+    the distribution of the scores under the above stated assumptions,
+    which is used to
+    determine the score threshold for a user-prescribed significance level.
+    This allows to control the rate false positive predictions when searching
+    for motif matches.
+    Moreover, 'motifcounter' provides implementations for a compound
+    Poisson approximation and a combinatorial model to efficiently approximate
+    the distribution of the motif match counts, which for the basis for a
+    motif hit enrichment test.
+    These models take higher-order background models, the motif's
+    self-similarity, as well as self-overlapping motif matches when
+    both DNA strands are scanned into account. 
+    The package is in particular useful for long motifs and/or relaxed
+    choices of score thresholds, because the implemented algorithms bypass
+    the need for enumerating a (potentially huge) set of DNA words 
+    that can give rise to a motif match.
 License: GPL-2
 biocViews: Transcription,MotifAnnotation,SequenceMatching,Software
 Packaged: 2016-11-24 14:30:57 UTC; kopp
