--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,5 @@ export(scoreHistogram)
 export(scoreProfile)
 export(scoreSequence)
 import(Biostrings)
+import(methods)
 useDynLib(motifcounter, .registration=TRUE)
