--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: motifcounter
 Type: Package
 Title: R package for analysing TFBSs in DNA sequences
-Version: 0.99.0
+Version: 0.99.1
 Date: 2016
 Author: Wolfgang Kopp [aut, cre]
 Suggests:
@@ -15,34 +15,36 @@ Imports:
     Biostrings,
     methods
 Depends:
-    R(>= 3.0.0)
+    R(>= 3.3)
 Maintainer: Wolfgang Kopp <kopp@molgen.mpg.de>
 Description: 'motifcounter' provides functionality
-    to compute statistics related with 
+    to compute the statistics related with 
     motif matching and counting of motif matches in DNA 
-    sequences for motifs that are given by position frequency matrices (PFMs)
-    and under the assumption that the sequence drawn from 
-    a higher-order background model.
-    The package implements an efficient algorithm for computing
-    the distribution of the scores under the above stated assumptions,
-    which is used to
-    determine the score threshold for a user-prescribed significance level.
-    This allows to control the rate false positive predictions when searching
-    for motif matches.
-    Moreover, 'motifcounter' provides implementations for a compound
-    Poisson approximation and a combinatorial model to efficiently approximate
-    the distribution of the motif match counts, which for the basis for a
-    motif hit enrichment test.
-    These models take higher-order background models, the motif's
-    self-similarity, as well as self-overlapping motif matches when
-    both DNA strands are scanned into account. 
+    sequences. As an input, 'motifcounter' requires a motif 
+    in terms of a position frequency matrix (PFM). Furthermore,
+    a set of DNA sequences is required to estimated a 
+    higher-order background model (BGM).
+    The package provides functions to investigate the
+    the per-position and per strand log-likelihood scores between the 
+    PFM and the BGM across a given sequence of set of sequences.
+    Furthermore, the package facilitates motif matching based on an
+    automatically derived score threshold. To this end
+    the distribution of scores is efficiently determined and the
+    score threshold is chosen for a user-prescribed significance level.
+    This allows to control for the false positive rate.
+    Moreover, 'motifcounter' implements a motif match enrichment test
+    based on two the number of motif matches that are expected in random DNA
+    sequences. Motif enrichment is facilitated by either 
+    a compound Poisson approximation or a combinatorial approximation
+    of the motif match counts.
+    Both models take higher-order background models, the motif's
+    self-similarity, and hits on both DNA strands into account.
     The package is in particular useful for long motifs and/or relaxed
-    choices of score thresholds, because the implemented algorithms bypass
-    the need for enumerating a (potentially huge) set of DNA words 
+    choices of score thresholds, because the implemented algorithms efficiently
+    bypass the need for enumerating a (potentially huge) set of DNA words 
     that can give rise to a motif match.
 License: GPL-2
 biocViews: Transcription,MotifAnnotation,SequenceMatching,Software
-Packaged: 2016-11-24 14:30:57 UTC; kopp
 RoxygenNote: 5.0.1
 VignetteBuilder: knitr
 NeedsCompilation: yes
