--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,8 @@ warnings_are_errors: false
 bioc_packages:
     - BiocStyle
 
-matrix:
-    include:
-     - os: linux
-       dist: trusty
-       sudo: required
-     - os: osx
-       osx_image: xcode7.2
+os: linux
+dist: trusty
 
 r_packages:
   - covr
