--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: motifcounter
 Type: Package
 Title: R package for analysing TFBSs in DNA sequences
-Version: 1.9.0
+Version: 1.9.1
 Date: 2017
 Author: Wolfgang Kopp [aut, cre]
-Suggests: knitr, rmarkdown, testthat, MotifDb, seqLogo, prettydoc
-Imports: Biostrings, methods
+Suggests: knitr, rmarkdown, testthat, MotifDb, seqLogo, prettydoc,
+        BSgenome.Hsapiens.UCSC.hg38
+Imports: Biostrings, methods, GenomicRanges, BSgenome, genomation
 Depends: R(>= 3.0)
 Maintainer: Wolfgang Kopp <wolfgang.kopp@mdc-berlin.de>
 Description: 'motifcounter' provides motif matching, motif counting
