--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,19 @@ export(scoreDist)
 export(scoreHistogram)
 export(scoreProfile)
 export(scoreSequence)
+export(topMotifs)
 exportMethods(motifEnrichment)
 import(BSgenome)
 import(Biostrings)
+import(ggplot2)
 import(methods)
+import(reshape2)
 importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,GRangesList)
+importFrom(dplyr,group_by)
+importFrom(dplyr,top_n)
 importFrom(genomation,readBed)
+importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
+importFrom(stats,reorder)
 useDynLib(motifcounter, .registration=TRUE)
